virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    ms: microService-git-v001
  name: hello-virtualservice
spec:
  gateways:
    - hello-gateway
  hosts:
    - '*'
  http:
    - match:
        - headers:
            X-PLT-User-Id:
              exact: 'spinnakerChangedIt'
      route:
        - destination:
            host: hello-service.default.svc.cluster.local
            port:
              number: 8080
            subset: 'canaryversiontestUser'
    - route:
        - destination:
            host: hello-service.default.svc.cluster.local
            port:
              number: 8080
            subset: deployversion
